Fix loading resources.